# kiwiglider

./: .gitignore  CHANGELOG.md  DevDiary.ipynb  README.md  paper.md  pyproject.toml
kiwiglider/: extras.py  steps.py  utils.py
notebooks/: DevDiary.md  Glider_BasicProcessing.ipynb  Glider_PostProcessing.ipynb  niwaglider_environment.txt  varList_options.txt
src/kiwiglider/: .basic.py.swp  Glider_BasicProcessing.ipynb  __init__.py  basic.py  colormap.py  delayed.py  setup.py  steps.py  utils.py
