[project]
name = "kiwiglider"
version = "0.1.0"
description = "Python package to fill the gap in post-processing Slocum glider data from raw binary (as done in pyglider) to higher-level processing (glidertools)."
readme = "README.md"
authors = [
    { name = "Alain de Verneil", email = "alain.deverneil@niwa.co.nz" },
    { name = "Cassandra Elmer", email = "cassandra.elmer@niwa.co.nz"}
]
requires-python = ">3.8"
dependencies = [
    "numpy",
    "xarray",
    "gsw",
    "pyglider",
    "pygmt",
    "openpyxl",
    "ioos_qc",
    "compliance_checker",
    "cc-plugin-glider",
    "cmocean",
    "utm"
]

[project.scripts]
kiwiglider = "kiwiglider:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

